--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "react_redux",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "The init project of react_redux",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node server/index.js",
     "build": "webpack --color --progress",
     "watch": "webpack --color --progress --watch",
-    "production": "webpack --color --progress --config=webpack.production.js"
+    "production": "webpack --color --progress --config=build/config/webpack.config.js"
   },
   "dependencies": {
     "babel-cli": "^6.7.7",
@@ -41,11 +41,11 @@
     "babel-polyfill": "^6.9.1",
     "babel-preset-react-hmre": "^1.1.1",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "2.0.0-beta",
+    "extract-text-webpack-plugin": "2.0.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.5",
+    "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "^2.12.1"
